# apxeer

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SECURITY.md  package-lock.json
.github/workflows/: _deploy.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-stage.yml  deploy.yml
api/: .env.example  go.mod  go.sum  railway.toml
api/cmd/api/: main.go
api/cmd/migrate/: main.go
api/migrations/: 001_initial.up.sql  002_events_and_enrichment.sql  003_tracks_null_layout_index.up.sql
apxeer-api/: .env.example  .gitignore  Dockerfile  fly.toml  go.mod  go.sum  main.go
apxeer-api/db/: local.sql
apxeer-api/migrations/: 001_local.sql
apxeer-desktop/: index.html  package-lock.json  package.json
apxeer-desktop/src/: main.ts  styles.css
apxeer-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apxeer-desktop/src-tauri/src/: lib.rs  main.rs  results.rs  settings.rs  telemetry.rs  upload.rs
apxeer-desktop/src-tauri/src/lmu_telemetry/: mod.rs  types.rs
apxeer-web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apxeer-web/src/: app.tsx  main.tsx  style.css  vite-env.d.ts
docs/: architecture.md  decisions.md  deployment.md
plans/: SPEC.md  lmu-shared-memory-rust.md
racemate-api/: Dockerfile  fly.toml  go.mod  main.go
racemate-web/: Dockerfile  fly.toml  index.html  nginx.conf  package-lock.json  package.json
racemate-web/src/: app.tsx
supabase/: .gitignore  config.toml
supabase/migrations/: 20260324000000_initial.sql  20260324000001_events_and_enrichment.sql
(+42 files in other folders)
