[package]
name = "apxeer-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "apxeer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
roxmltree = "0.20"
dirs = "5"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
time = { version = "0.3.47", features = ["macros", "formatting"] }
winapi = { version = "0.3", features = ["everything"] }
winreg = "0.52"
widestring = "1"
